add destroy car endpoint + minor bug fix + docs
