# config/routes.js
@@ -1,8 +1,15 @@
 const express = require("express");
+const swaggerUi = require('swagger-ui-express');
+const swaggerDocument = require('../docs/openapi.json');
 const controllers = require("../app/controllers");
 const upload = require("./upload")
 
 const apiRouter = express.Router();
+
+//--------------------------------------------------------------------
+// swagger ui routes
+apiRouter.use(['/', '/api-docs'], swaggerUi.serve);
+apiRouter.get(['/', '/api-docs'], swaggerUi.setup(swaggerDocument));
 
 //--------------------------------------------------------------------
 // auth & user control routes
@@ -51,13 +58,19 @@ apiRouter.put(["/api/v1/cars/:id", "/api/cars/:id"],
 apiRouter.delete(["/api/v1/cars/:id", "/api/cars/:id"],
     controllers.api.v1.authController.authorizeAdmin,
     controllers.api.v1.carController.delete)
+
 apiRouter.get(["/api/v1/archive/cars", "/api/archive/cars"],
     controllers.api.v1.authController.authorizeAdmin,
     controllers.api.v1.carController.listDeleted)
 apiRouter.get(["/api/v1/archive/cars/:id", "/api/archive/cars/:id"],
     controllers.api.v1.authController.authorizeAdmin,
     controllers.api.v1.carController.forceShow)
-
+apiRouter.delete(["/api/v1/archive/cars/:id", "/api/archive/cars/:id"],
+    controllers.api.v1.authController.authorizeAdmin,
+    controllers.api.v1.carController.permanentDelete)
+apiRouter.get(["/api/v1/archive/cars/:id/restore", "/api/archive/cars/:id/restore"],
+    controllers.api.v1.authController.authorizeAdmin,
+    controllers.api.v1.carController.restore)
 
 apiRouter.post(["/api/v1/images", "/api/images"],
     controllers.api.v1.authController.authorizeAdmin,
